# samples-

./: .gitignore  pyproject.toml
streamlit-demo/: gargzdai.txt  streamlit-demo.py  streamlit-langchain.py
web-search-chatbot/: requirements.txt
web-search-chatbot/agents/: tools.py
